--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -7,6 +7,15 @@
 
 </head>
 <body>
+<div>
+    <form action="">
+        <input type="text" name="first_name">
+        <input type="text" name="last_name">
+        <input type="text" name="address">
+        <input type="text" name="first_name">
 
+    </form>
+</div>
+hejjeje
 </body>
 </html>
