--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -8,14 +8,54 @@
 </head>
 <body>
 <div>
-    <form action="">
+    <h1>Registrer bruger info</h1>
+    <br>
+    <br>
+    <form action="" method="post">
+        fornavn
+        <br>
         <input type="text" name="first_name">
+        <br>
+        efternavn
+        <br>
         <input type="text" name="last_name">
+        <br>
+        adresse
+        <br>
         <input type="text" name="address">
-        <input type="text" name="first_name">
-
+        <br>
+        postnummer
+        <br>
+        <input type="number" name="postcode">
+        <br>
+        by
+        <br>
+        <input type="text" name="city">
+        <br>
+        email
+        <br>
+        <input type="email" name="email">
+        <br>
+        telefon nummer
+        <br>
+        <input type="number" name="tlf">
+        <br>
+        cpr-nummer
+        <br>
+        <input type="number" name="cpr">
+        <br>
+        registrering nummer
+        <br>
+        <input type="number" name="reg_number">
+        <br>
+        konto nummer
+        <br>
+        <input type="number" name="account_number">
+        <br>
+        <input type="submit">
     </form>
+
 </div>
-hejjeje
+
 </body>
 </html>
