--- a/src/main/resources/templates/register-car.html
+++ b/src/main/resources/templates/register-car.html
@@ -9,9 +9,11 @@
 
 <body>
 <div>
+    <h1>Registrer bilr</h1>
     <form action="/get-chassis-number" method="post">
-        <label for="chassis-number">Indtast registrerings nummer</label>
         <br>
+        <br>
+        stel nummer
         <br>
         <input type="number" name="chassis-number">
         <input type="submit">
