--- a/src/main/resources/templates/register-location-information.html
+++ b/src/main/resources/templates/register-location-information.html
@@ -7,6 +7,26 @@
 
 </head>
 <body>
+<div>
+<h1>Registrer lokation</h1>
+    <br>
+    <br>
+    <form action="" method="post">
+        Adresse
+        <br>
+        <input type="text" name="address">
+        <br>
+        by
+        <br>
+        <input type="text" name="city">
+        <br>
+        postnummer
+        <br>
+        <input type="number" name="postcode">
+        <br>
+        <input type="submit">
 
+    </form>
+</div>
 </body>
 </html>
