--- a/src/main/resources/templates/subscription-receipt.html
+++ b/src/main/resources/templates/subscription-receipt.html
@@ -7,5 +7,35 @@
 </head>
 <body>
 
+<div>
+  <h1>Registrer abonnement</h1>
+  <br>
+  <br>
+  <form action="" method="post">
+    selvrisiko ja/nej
+    <br>
+    <input type="text" name="selfrisk">
+    <br>
+    afhentnings forsikring ja/nej
+    <br>
+    <input type="text" name="delivery_insurance">
+    <br>
+    total pris
+    <br>
+    <input type="number" name="total_price">
+    <br>
+    lejeperiode
+    <br>
+    <input type="number" name="lenght">
+    <br>
+    abonnements type limited/unlimited
+    <br>
+    <input type="text" name="subscription-type">
+    <br>
+    <input type="submit">
+
+  </form>
+</div>
+
 </body>
 </html>
