--- a/src/main/resources/templates/subscription-receipt.html
+++ b/src/main/resources/templates/subscription-receipt.html
@@ -32,6 +32,10 @@
     <br>
     <input type="text" name="subscription-type">
     <br>
+    startdato
+    <br>
+    <input type="text" name="pickup-date">
+    <br>
     <input type="submit">
 
   </form>
