--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -11,14 +11,14 @@
     <h1>Registrer bruger info</h1>
     <br>
     <br>
-    <form action="" method="post">
+    <form action="/get-renter-information" method="post">
         fornavn
         <br>
-        <input type="text" name="first_name">
+        <input type="text" name="firstName">
         <br>
         efternavn
         <br>
-        <input type="text" name="last_name">
+        <input type="text" name="lastName">
         <br>
         adresse
         <br>
@@ -46,11 +46,11 @@
         <br>
         registrering nummer
         <br>
-        <input type="number" name="reg_number">
+        <input type="number" name="regNumber">
         <br>
         konto nummer
         <br>
-        <input type="number" name="account_number">
+        <input type="number" name="accountNumber">
         <br>
         <input type="submit">
     </form>
