--- a/src/main/resources/templates/create-subscription-information.html
+++ b/src/main/resources/templates/create-subscription-information.html
@@ -7,6 +7,38 @@
 
 </head>
 <body>
+<div>
+    <h1>Registrer abonnement</h1>
+    <br>
+    <br>
+    <form action="get-subscription-information" method="post">
+        selvrisiko ja/nej
+        <br>
+        <input type="text" name="selfrisk">
+        <br>
+        afhentnings forsikring ja/nej
+        <br>
+        <input type="text" name="deliveryInsurance">
+        <br>
+        total pris
+        <br>
+        <input type="number" name="totalPrice">
+        <br>
+        lejeperiode
+        <br>
+        <input type="number" name="lenght">
+        <br>
+        abonnements type limited/unlimited
+        <br>
+        <input type="text" name="subscriptionType">
+        <br>
+        startdato
+        <br>
+        <input type="text" name="pickupDate">
+        <br>
+        <input type="submit">
 
+    </form>
+</div>
 </body>
 </html>
