--- a/src/main/resources/templates/register-location-information.html
+++ b/src/main/resources/templates/register-location-information.html
@@ -11,7 +11,7 @@
 <h1>Registrer lokation</h1>
     <br>
     <br>
-    <form action="" method="post">
+    <form action="get-location-information" method="post">
         Adresse
         <br>
         <input type="text" name="address">
