--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -7,6 +7,14 @@
 
 </head>
 <body>
+<div class="main-nav">
+    <ul class="main-nav-ul">
+        <li><a href="register-car.html"> Register Bil</a></li>
+        <li><a href="create-renter-information.html"> Register Lejer</a></li>
+        <li><a href="register-location-information.html"> Register Lokation</a></li>
+
+    </ul>
+    </div>
 
 </body>
 </html>
