Har prøvet noget

--- a/src/main/resources/templates/damage-register.html
+++ b/src/main/resources/templates/damage-register.html
@@ -2,10 +2,90 @@
 <html lang="en" xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Rappoter Skade</title>
+    <title>Registrer Abonnement</title>
     <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
+
 </head>
 <body>
+<form action="/registerdamage" method="post">
+<h1>Register Skade</h1>
 
+<table>
+    <tr>
+        <th>Skade</th>
+        <th>Pris</th>
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+    <tr>
+        <td><input type="text" name="defect-desciption"></td>
+        <td><input type="text" name="defect-price"></td>
+
+    </tr>
+
+
+    <br>
+
+
+</table>
+<div>
+<br>
+        <input type="submit" value="Gem">
+
+    </form>
+</div>
 </body>
 </html>
