--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -42,15 +42,15 @@
         <br>
         cpr-nummer
         <br>
-        <input type="number" name="cpr">
+        <input type="text" name="cpr" placeholder="XXXXXX-XXXX">
         <br>
         registrering nummer
         <br>
-        <input type="number" name="regNumber">
+        <input type="number" name="regNumber" PLACEHOLDER="XXXX">
         <br>
         konto nummer
         <br>
-        <input type="number" name="accountNumber">
+        <input type="number" name="accountNumber" PLACEHOLDER="XXXXXXXXXX">
         <br>
         <input type="submit">
     </form>
