--- a/src/main/resources/templates/create-subscription-information.html
+++ b/src/main/resources/templates/create-subscription-information.html
@@ -14,11 +14,17 @@
     <form action="get-subscription-information" method="post">
         selvrisiko ja/nej
         <br>
-        <input type="text" name="selfrisk">
+        <input type="radio" id="ja" value="ja" name="selfrisk">
+        <label for="ja">Ja</label>
+        <input type="radio" id="nej" value="nej" name="selfrisk">
+        <label for="nej">Nej</label>
         <br>
         afhentnings forsikring ja/nej
         <br>
-        <input type="text" name="deliveryInsurance">
+        <input type="radio" id="ja1" value="ja" name="deliveryInsurance">
+        <label for="ja1">Ja</label>
+        <input type="radio" id="nej1" value="nej" name="deliveryInsurance">
+        <label for="nej1">Nej</label>
         <br>
         total pris
         <br>
@@ -26,15 +32,34 @@
         <br>
         lejeperiode
         <br>
-        <input type="number" name="lenght">
+        <input type="radio" name="lenght" id="3" value="3">
+        <label for="3">3 Måneder</label>
+
+        <input type="radio" name="lenght" id="4" value="4">
+        <label for="4">4 Måneder</label>
+
+        <input type="radio" name="lenght" id="6" value="6">
+        <label for="6">6 Måneder</label>
+        <br>
+        <input type="radio" name="lenght" id="12" value="12">
+        <label for="12">12 Måneder</label>
+
+        <input type="radio" name="lenght" id="24" value="24">
+        <label for="24">24 Måneder</label>
+
+        <input type="radio" name="lenght" id="36" value="36">
+        <label for="36">36 Måneder</label>
         <br>
         abonnements type limited/unlimited
         <br>
-        <input type="text" name="subscriptionType">
+        <input type="radio" id="limited" value="limited" name="subscriptionType">
+        <label for="limited">Limited</label>
+        <input type="radio" id="unlimited" value="unlimited" name="subscriptionType">
+        <label for="unlimited">Unlimited</label>
         <br>
         startdato
         <br>
-        <input type="text" name="pickupDate">
+        <input type="date" name="pickupDate">
         <br>
         <input type="submit">
 
