--- a/src/main/resources/templates/damage-choose-chassis-number.html
+++ b/src/main/resources/templates/damage-choose-chassis-number.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Rapporter Skade</title>
@@ -9,7 +9,7 @@
 
 <img src="../static/pictures/Logo-bilabonnement.png" height="160" width="1000"/></body>
 <div class="choose-chassis-number-damage">
-    <form action="/get-chassis-number" method="post">
+    <form method="POST" action="/damagechassisnumber">
         <label>Indtast stelnummer på bil:</label>
         <br>
         <br>
