--- a/src/main/resources/templates/damage-register.html
+++ b/src/main/resources/templates/damage-register.html
@@ -16,66 +16,12 @@
         <th>Pris</th>
     </tr>
     <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
+        <td><input name="defectDescription" th:value="defectDescription"></td>
 
     </tr>
     <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
+        <td><input name="defectDescription" th:value="price"></td>
     </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-    <tr>
-        <td><input type="text" name="defect-desciption"></td>
-        <td><input type="text" name="defect-price"></td>
-
-    </tr>
-
 
     <br>
 
@@ -83,9 +29,13 @@
 </table>
 <div>
 <br>
-        <input type="submit" value="Gem">
-
-    </form>
+        <input type="submit" value="Næste skade">
 </div>
+
+
+<form action="/succesdamage" method="get">
+    <input type="submit" value="Færdig med registrering">
+</form>
+</form>
 </body>
 </html>
