--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
             <div class="nav-valg">
                 <h3>Skade & Udbedring</h3>
                 <a href="">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
-                <a href="choosechassisnumber">Registrer fejl og mangler</a>
+                <a href="carid">Registrer fejl og mangler</a>
             </div>
 
             <br>
