--- a/src/main/resources/static/fragment.css
+++ b/src/main/resources/static/fragment.css
@@ -54,3 +54,16 @@
 #logo{
     width: 65%;
 }
+
+input {
+    display: flex;
+    justify-content: center;
+    margin-left: 600px;
+
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+    margin-left: 300px;
+}
