--- a/src/main/resources/templates/carid.html
+++ b/src/main/resources/templates/carid.html
@@ -1,16 +1,59 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Damage</title>
+    <title>Stelnummer</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
 
 </head>
 <body>
 
-<h1>Form</h1>
+<br>
+<!--Side navigator -->
+<div class="container">
+    <section class="section 1">
+
+        <nav class="side-nav">
+            <div class="nav-valg ">
+                <h3>Dataregistrering</h3>
+                <a href="register-car">Registrer ny lejeaftale</a>
+            </div>
+
+            <br>
+
+            <div class="nav-valg">
+                <h3>Skade & Udbedring</h3>
+                <a href="">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
+                <a href="carid">Registrer fejl og mangler</a>
+            </div>
+
+            <br>
+
+            <div class="nav-valg">
+                <h3>Forretningsudviklere</h3>
+                <a href="">Vis oversigt over udlejede biler</a>
+                <a href="">Vis pris på udlejede biler</a>
+            </div>
+
+        </nav>
+
+    </section>
+
+
+
+
+    <section class="board">
+
+        <div class="logo">
+            <img id="logo"  src="pictures/Logo-bilabonnement.png">
+        </div>
+
+    </section>
+</div>
+
+<h1>Find den bil du vil registrer skader på</h1>
 <form action="#" th:action="@{/carid}" method="post">
-    <p>Car id: <input name="carid" type="number"/></p>
+    <p>Stelnummer: <input name="carid" type="number"/></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 <a href="/"><button class="goto_button">
@@ -18,4 +61,8 @@
 </button>
 </a>
 </body>
+
+
+
+
 </html>
