--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -1,23 +1,67 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Damage</title>
+    <title>Skade</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
 
 </head>
 <body>
 
-<h1>Damage form</h1>
+<br>
+<!--Side navigator -->
+<div class="container">
+    <section class="section 1">
+
+        <nav class="side-nav">
+            <div class="nav-valg ">
+                <h3>Dataregistrering</h3>
+                <a href="register-car">Registrer ny lejeaftale</a>
+            </div>
+
+            <br>
+
+            <div class="nav-valg">
+                <h3>Skade & Udbedring</h3>
+                <a href="">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
+                <a href="carid">Registrer fejl og mangler</a>
+            </div>
+
+            <br>
+
+            <div class="nav-valg">
+                <h3>Forretningsudviklere</h3>
+                <a href="">Vis oversigt over udlejede biler</a>
+                <a href="">Vis pris på udlejede biler</a>
+            </div>
+
+        </nav>
+
+    </section>
+
+
+
+
+    <section class="board">
+
+        <div class="logo">
+            <img id="logo"  src="pictures/Logo-bilabonnement.png">
+        </div>
+
+    </section>
+</div>
+
+
+<h1>Skade formular</h1>
 <p th:name="carid" th:value="${carid}"></p>
 
 <form action="#" th:action="@{'/damage?carid='+${carid}}" th:object="${damage}" method="post">
-    <p>Description: <input type="text" th:field="*{defectDescription}" /></p>
-    <p>Price: <input type="text" th:field="*{price}" /></p>
+    <p>Beskrivelse: <input type="text" th:field="*{defectDescription}" /></p>
+    <p>Pris: <input type="text" th:field="*{price}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 <a href="/"><button class="goto_button">
-    Home
+    Hjem
 </button>
 </a>
 </body>
