--- a/src/main/resources/templates/view-leased-cars.html
+++ b/src/main/resources/templates/view-leased-cars.html
@@ -21,7 +21,7 @@
                 <td th:text="${rentedCars.getChassisNumber}"></td>
                 <td th:text="${rentedCars.getModel}"></td>
                 <td th:text="${rentedCars.getColor}"></td>
-                <td th:text="${rentedCars.isRented}"></td>
+                <td th:text="${rentedCars.isRentedToString(rentedCars.isRented)}"></td>
 
             </tr>
         </table>
