--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>Registrer Abonnement</title>
     <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
+    <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
 
 </head>
 <body>
-<div>
+<nav>
+    <th:block th:replace="fragments/navigator :: nav"></th:block>
+</nav>
+<div class="whiteboard">
+    <h1>HAlli hallo og lige et øjeblik !!!!!!!!!!!!!!!!!!!!!!!!!</h1>
     <h1>Registrer bruger info</h1>
     <br>
     <br>
