--- a/src/main/resources/templates/subscription-receipt.html
+++ b/src/main/resources/templates/subscription-receipt.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
 </head>
 <body>
+<nav>
+  <th:block th:replace="fragments/navigator :: nav"></th:block>
+</nav>
+<div class="whiteboard">
+  <h1>HAlli hallo og lige et øjeblik !!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+</div>
 
 </body>
 </html>
