--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -12,54 +12,54 @@
     <th:block th:replace="fragments/navigator :: nav"></th:block>
 </nav>
 <div class="whiteboard">
-    <h1>HAlli hallo og lige et øjeblik !!!!!!!!!!!!!!!!!!!!!!!!!</h1>
     <h1>Registrer bruger info</h1>
     <br>
     <br>
-    <form action="/get-renter-information" method="post">
-        fornavn
-        <br>
-        <input type="text" name="firstName">
-        <br>
-        efternavn
-        <br>
-        <input type="text" name="lastName">
-        <br>
-        adresse
-        <br>
-        <input type="text" name="address">
-        <br>
-        postnummer
-        <br>
-        <input type="number" name="postcode">
-        <br>
-        by
-        <br>
-        <input type="text" name="city">
-        <br>
-        email
-        <br>
-        <input type="email" name="email">
-        <br>
-        telefon nummer
-        <br>
-        <input type="number" name="tlf">
-        <br>
-        cpr-nummer
-        <br>
-        <input type="text" name="cpr" placeholder="XXXXXX-XXXX">
-        <br>
-        registrering nummer
-        <br>
-        <input type="number" name="regNumber" PLACEHOLDER="XXXX">
-        <br>
-        konto nummer
-        <br>
-        <input type="number" name="accountNumber" PLACEHOLDER="XXXXXXXXXX">
-        <br>
-        <input type="submit">
-    </form>
-
+    <div class="tabel">
+        <form action="/get-renter-information" method="post">
+            Fornavn
+            <br>
+            <input type="text" name="firstName">
+            <br>
+            Efternavn
+            <br>
+            <input type="text" name="lastName">
+            <br>
+            Adresse
+            <br>
+            <input type="text" name="address">
+            <br>
+            Postnummer
+            <br>
+            <input type="number" name="postcode">
+            <br>
+            By
+            <br>
+            <input type="text" name="city">
+            <br>
+            Email
+            <br>
+            <input type="email" name="email">
+            <br>
+            Telefon nummer
+            <br>
+            <input type="number" name="tlf">
+            <br>
+            CPR-nummer
+            <br>
+            <input type="text" name="cpr" placeholder="XXXXXX-XXXX">
+            <br>
+            Reg.nr
+            <br>
+            <input type="number" name="regNumber" PLACEHOLDER="XXXX">
+            <br>
+            Konto nummer
+            <br>
+            <input type="number" name="accountNumber" PLACEHOLDER="XXXXXXXXXX">
+            <br>
+            <input type="submit">
+        </form>
+    </div>
 </div>
 
 </body>
