--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,7 +12,23 @@
     padding: 30px 0;
 }
 
+h1{
+    display: flex;
+    justify-content: center;
+}
+/*
+input {
+    display: flex;
+    justify-content: center;
+    margin-left: 600px;
 
+}
+
+ */
+
+.tabel{
+    margin-left: 250px;
+}
 
 .choose-chassis-number-damage{
     display: flex;
@@ -24,11 +40,3 @@
 
 }
 
-.whiteboard{
-    margin-left: 600px;
-
-}
-
-.whiteboard > * {
-    margin-left: 400px;
-}
