--- a/src/main/resources/templates/view-leased-cars.html
+++ b/src/main/resources/templates/view-leased-cars.html
@@ -12,7 +12,7 @@
     <th:block th:replace="fragments/navigator :: nav"></th:block>
 </nav>
 <div class="whiteboard">
-    <h1>HAlli hallo og lige et øjeblik !!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+    <h1>Udlejede biler</h1>
 
     <div class="tabel">
         <form action="">
