--- a/src/main/resources/templates/register-location-information.html
+++ b/src/main/resources/templates/register-location-information.html
@@ -11,6 +11,7 @@
 <h1>Registrer lokation</h1>
     <br>
     <br>
+    <div th:text="${error}" th:if="${error}" style="color: red"></div>
     <form action="get-location-information" method="post">
         Adresse
         <br>
