--- a/src/main/resources/templates/damage-register.html
+++ b/src/main/resources/templates/damage-register.html
@@ -7,6 +7,8 @@
 
 </head>
 <body>
+<div class="whiteboard">
+<div class="tabel">
 <form action="/registerdamage" method="post">
 <h1>Register Skade</h1>
 
@@ -37,5 +39,7 @@
     <input type="submit" value="Færdig med registrering">
 </form>
 </form>
+</div>
+</div>
 </body>
 </html>
