--- a/src/main/resources/templates/success-page.html
+++ b/src/main/resources/templates/success-page.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
 </head>
 <body>
-sådan
+<div class="whiteboard">
+  <div class="tabel">
+    <h1>Sådan</h1>
+</div>
+</div>
 </body>
 </html>
