--- a/src/main/resources/templates/price.html
+++ b/src/main/resources/templates/price.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kvittering </title>
+    <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
 </head>
 <body>
-
+sådan
 </body>
 </html>
