--- a/src/main/resources/templates/carid.html
+++ b/src/main/resources/templates/carid.html
@@ -16,7 +16,7 @@
 
 <div class="whiteboard">
     <div class="tabel">
-<h1>Find den bil du vil registrer skader på</h1>
+<h1>Find den bil du vil registrere skader på</h1>
 <form action="#" th:action="@{/carid}" method="post">
     <p>Stelnummer: <input name="carid" type="number"/></p>
     <p><input type="submit" value="Gem" /> <input type="reset" value="Nulstil feltet" /></p>
