--- a/src/main/resources/templates/return-car.html
+++ b/src/main/resources/templates/return-car.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Kvittering </title>
-    <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
+    <link rel="stylesheet" th:href="@{style.css}" type="text/css">
 </head>
 
 <body>
