--- a/src/main/resources/templates/return-car-success.html
+++ b/src/main/resources/templates/return-car-success.html
@@ -6,53 +6,9 @@
     <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
 </head>
 <body>
-<div class="container">
-    <section class="section 1">
 
-        <nav class="side-nav">
-            <div class="nav-valg ">
-                <h3>Dataregistrering</h3>
-                <a href="register-car">Registrer ny lejeaftale</a>
-            </div>
+fed!
 
-            <br>
 
-            <div class="nav-valg">
-                <h3>Skade & Udbedring</h3>
-                <a href="">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
-                <a href="carid">Registrer fejl og mangler</a>
-            </div>
-
-            <br>
-
-            <div class="nav-valg">
-                <h3>Forretningsudviklere</h3>
-                <a href="">Vis oversigt over udlejede biler</a>
-                <a href="">Vis pris på udlejede biler</a>
-            </div>
-
-        </nav>
-
-    </section>
-
-    <section class="board">
-
-        <div class="logo">
-            <img id="logo"  src="pictures/Logo-bilabonnement.png">
-        </div>
-
-    </section>
-</div>
-
-<div class="return-car-success">
-
-    <form action="/gethomepage" method="post">
-        <br>
-        <br>
-        Bilen er afleveret
-        <br>
-        <input type="submit" value="Tilbage til forside">
-    </form>
-</div>
 </body>
 </html>
