lavet finance-page.html der der udregner prisen på det forventede indtjening på de nuværende bilers udlejning i forhold til den resterende tid (pick up date + end of lease - i dag) :))

--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -32,7 +32,7 @@
             <div class="nav-valg">
                 <h3>Forretningsudviklere</h3>
                 <a href="rented-cars">Vis oversigt over udlejede biler</a>
-                <a href="">Vis pris på udlejede biler</a>
+                <a href="finance">Vis pris på udlejede biler</a>
             </div>
 
         </nav>
