error message for create renter end create subscription

--- a/src/main/resources/templates/create-subscription-information.html
+++ b/src/main/resources/templates/create-subscription-information.html
@@ -16,6 +16,7 @@
     <div class="tabel">
 
     <h1>Registrer abonnement</h1>
+        <div th:text="${error}" th:if="${error}" style="color: red"></div>
         <form action="get-subscription-information" method="post">
             Selvrisiko
             <br>
