--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -14,6 +14,7 @@
 <div class="whiteboard">
     <div class="tabel">
     <h1>Registrer bruger info</h1>
+        <div th:text="${error}" th:if="${error}" style="color: red"></div>
         <form action="/get-renter-information" method="post">
             Fornavn
             <br>
