fixed isrented issue

--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -15,6 +15,12 @@
 
         <nav class="side-nav">
             <div class="nav-valg ">
+                <a href="/">
+                    <img id="home"  src="pictures/homethree.png">
+                </a>
+            </div>
+
+            <div class="nav-valg ">
                 <h3>Dataregistrering</h3>
                 <a href="register-car">Registrer ny lejeaftale</a>
             </div>
