--- a/src/main/resources/static/fragment.css
+++ b/src/main/resources/static/fragment.css
@@ -9,7 +9,7 @@
 }
 
 .side-nav{
-    width: 15%;
+    width: 300px;
     height: 100%;
     background-color: #f2f2f2;
     position: fixed;
@@ -33,7 +33,7 @@
     color: black;
     text-decoration: none;
     padding: 18px;
-    padding-left: 15%;
+    padding-left: 300px;
     display: block;
     font-size: 18px;
 
@@ -46,7 +46,7 @@
 .logo{
     display: flex;
     justify-content:center;
-    margin-left: 15%;
+    margin-left: 300px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
@@ -54,13 +54,16 @@
 #logo{
     width: 65%;
 }
+#home{
+
+}
 
 .tabel {
     position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-left: 15%;
+    margin-left: 300px;
 }
 
 .whiteboard{
@@ -68,7 +71,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 15%;
+    margin-left: 300px;
     padding-top: 100px;
     padding-bottom: 5px;
 }
