--- a/src/main/resources/templates/return-car.html
+++ b/src/main/resources/templates/return-car.html
@@ -3,14 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Kvittering </title>
+    <title>Returner Bil </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
     <link rel="stylesheet" th:href="@{style.css}" type="text/css">
 </head>
 
 <body>
-<div>
+<nav>
+    <th:block th:replace="fragments/navigator :: nav"></th:block>
+</nav>
+
+<div class="whiteboard">
+
     <h1>Aflever bil</h1>
 
     <form action="/returncarpage" method="post">
