--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,15 +1,19 @@
-.header{
-    display: flex;
+.tabel {
     position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 300px;
 }
 
-
-.header.sidebar{
-    position: fixed;
-    width: 200px;
-    height: 100%;
-    background: tomato;
-    padding: 30px 0;
+.whiteboard{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 300px;
+    padding-top: 100px;
+    padding-bottom: 5px;
 }
 
 h1{
@@ -35,4 +39,5 @@ input {
     margin: 2.5% 50% 1%;
 
 }
+
 
